--- a/src/componentes/style.css
+++ b/src/componentes/style.css
@@ -44,7 +44,8 @@ body {
 }
 
 .card > img {
-    width: 40%;
+    width: 20%;
+    padding: 10px 0 10px 0;
 }
 
 .right-content {
@@ -52,7 +53,7 @@ body {
     text-align: center;
     color: black;
     position: fixed;
-    top: 100px;
+    top: 65px;
     right: 10px;
 }
 
@@ -81,4 +82,27 @@ body {
     padding: 0.5rem;
     font-size: 12px;
     border-radius: 8px;
+    text-shadow: 0.5px 0.5px 2px black;
+}
+
+.base-stat {
+    margin-top: 2rem;
+}
+
+.btn-group {
+    display: flex;
+}
+
+.btn-group > button {
+    outline: none;
+    border: none;
+    width: 150px;
+    padding: 0.3rem 0;
+    margin: 1rem;
+    font-size: 17px;
+    font-weight: bold;
+    color: whitesmoke;
+    background-color: coral;
+    border-radius: 8px;
+    text-shadow: 0.5px 0.5px 2px black;
 }
