--- a/src/componentes/style.css
+++ b/src/componentes/style.css
@@ -6,103 +6,110 @@
   font-family: "Poppins", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Koulen", cursive;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Koulen", cursive;
 }
 
 body {
-    background-color: antiquewhite;
+  background-color: antiquewhite;
 }
 
-.container{
-    width: 90%;
-    margin: auto;
-    padding-top: 100px;
-    display: flex;
+.container {
+  width: 90%;
+  margin: auto;
+  padding-top: 100px;
+  display: flex;
 }
 
-.left-content, .right-content{
-    flex-basis: 50%;
+.left-content,
+.right-content {
+  flex-basis: 50%;
 }
 
 .left-content {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,0.5fr));
-    grid-gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 0.5fr));
+  grid-gap: 2rem;
 }
 
 .card {
-    width: 300px;
-    background-color: aquamarine;
-    border-radius: 1rem;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
-    padding: 0 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
+  width: 300px;
+  background-color: aquamarine;
+  border-radius: 1rem;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+  padding: 0 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .card > img {
-    width: 20%;
-    padding: 10px 0 10px 0;
+  width: 20%;
+  padding: 10px 0 10px 0;
 }
 
 .right-content {
-    width: 50%;
-    text-align: center;
-    color: black;
-    position: fixed;
-    top: 65px;
-    right: 10px;
+  width: 50%;
+  text-align: center;
+  color: black;
+  position: fixed;
+  top: 65px;
+  right: 10px;
 }
 
 .right-content > img {
-    margin: 2rem;
+  margin: 2rem;
+  height: 190px;
 }
 
 .right-content > text {
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
 .abilities {
-    width: 30%;
-    margin: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 1rem;
+  width: 30%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 1rem;
 }
 
 .abilities .group {
-    background-color: coral;
-    color: whitesmoke;
-    padding: 0.5rem;
-    font-size: 12px;
-    border-radius: 8px;
-    text-shadow: 0.5px 0.5px 2px black;
+  background-color: coral;
+  color: whitesmoke;
+  padding: 0.5rem;
+  font-size: 12px;
+  border-radius: 8px;
+  text-shadow: 0.5px 0.5px 2px black;
 }
 
 .base-stat {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .btn-group {
-    display: flex;
+  display: flex;
 }
 
 .btn-group > button {
-    outline: none;
-    border: none;
-    width: 150px;
-    padding: 0.3rem 0;
-    margin: 1rem;
-    font-size: 17px;
-    font-weight: bold;
-    color: whitesmoke;
-    background-color: coral;
-    border-radius: 8px;
-    text-shadow: 0.5px 0.5px 2px black;
+  outline: none;
+  border: none;
+  width: 150px;
+  padding: 0.3rem 0;
+  margin: 1rem;
+  font-size: 17px;
+  font-weight: bold;
+  color: whitesmoke;
+  background-color: coral;
+  border-radius: 8px;
+  text-shadow: 0.5px 0.5px 2px black;
 }
